add: main title section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,65 @@
     <!-- /header -->
 
     <!-- main -->
-    <main></main>
+    <main>
+        <!-- Main title section -->
+        <section>
+            <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <div class="author">
+                Scritto da <span class="creator">The Booleaner</span> <br>
+                il 10/10/2020
+            </div>
+            
+            <div>
+                <img src="img/tim-1.jpg" alt="tim-1">
+                <img src="img/tim-2.jpg" alt="tim-2">
+                <div>
+                    1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+                    2nd Photo: Wikimedia, by Paul Clarke
+                </div>
+            </div>
+        </section>
+        <!-- /Main title section -->
+        <!-- expalnation section -->
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur <span>adipisicing elit</span> . Quisquam deleniti voluptatum voluptate veniam. Aut tempora omnis qui dolores recusandae deserunt sunt eos ipsam nisi. Totam ratione laudantium esse suscipit ex. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus cumque molestias enim, dolores quam, cum laboriosam sit labore incidunt omnis commodi magni, deleniti molestiae recusandae nisi earum error architecto quod.</p>
+            <div>
+                <ul>
+                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure delectus nostrum fugit repellat quo, illum architecto ducimus, inventore laboriosam, laborum at quibusdam sapiente ratione praesentium fuga incidunt! Rerum, ratione quas.</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quidem corrupti esse distinctio odio, eaque saepe voluptates consequuntur praesentium! Harum accusantium adipisci, veritatis soluta cumque et fuga hic neque quis.</li>
+                    <li>Lorem ipsum dolor.</li>
+                </ul>
+            </div>
+
+            <table>
+                <thead>
+                    <th>lorem ipsum dolor</th>
+                    <th>lorem ipsum dolor</th>
+                    <th>lorem ipsum dolor</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>lorem ipsum</td>
+                        <td>lorem ipsum</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit laudantium amet reiciendis quae sequi voluptas ad! Debitis sint, corporis quisquam aliquam qui, corrupti et incidunt voluptate atque alias aut cum.</td>
+                    </tr> 
+                    <tr>
+                        <td>lorem ipsum</td>
+                        <td>lorem ipsum</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit laudantium amet reiciendis quae sequi voluptas ad! Debitis sint, corporis quisquam aliquam qui, corrupti et incidunt voluptate atque alias aut cum.</td>
+                    </tr> 
+                    <tr>
+                        <td>lorem ipsum</td>
+                        <td>lorem ipsum</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit laudantium amet reiciendis quae sequi voluptas ad! Debitis sint, corporis quisquam aliquam qui, corrupti et incidunt voluptate atque alias aut cum.</td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </section>
+        <!-- /explanation section -->
+
+    </main>
     <!-- main -->
 
     <!-- footer -->
