add: explanation section

--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
             </div>
         </section>
         <!-- /Main title section -->
+
         <!-- expalnation section -->
         <section>
-            <p>Lorem ipsum dolor sit amet consectetur <span>adipisicing elit</span> . Quisquam deleniti voluptatum voluptate veniam. Aut tempora omnis qui dolores recusandae deserunt sunt eos ipsam nisi. Totam ratione laudantium esse suscipit ex. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus cumque molestias enim, dolores quam, cum laboriosam sit labore incidunt omnis commodi magni, deleniti molestiae recusandae nisi earum error architecto quod.</p>
-            <div>
+            <p>Lorem ipsum dolor sit amet consectetur <span class="highlights">adipisicing elit</span> . Quisquam deleniti voluptatum voluptate veniam. Aut tempora omnis qui dolores recusandae deserunt sunt eos ipsam nisi. Totam ratione laudantium esse suscipit ex. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus cumque molestias enim, dolores quam, cum laboriosam sit labore incidunt omnis commodi magni, deleniti molestiae recusandae nisi earum error architecto quod.</p>
+
                 <ul>
                     <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure delectus nostrum fugit repellat quo, illum architecto ducimus, inventore laboriosam, laborum at quibusdam sapiente ratione praesentium fuga incidunt! Rerum, ratione quas.</li>
                     <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quidem corrupti esse distinctio odio, eaque saepe voluptates consequuntur praesentium! Harum accusantium adipisci, veritatis soluta cumque et fuga hic neque quis.</li>
                     <li>Lorem ipsum dolor.</li>
                 </ul>
-            </div>
 
             <table>
-                <thead>
-                    <th>lorem ipsum dolor</th>
-                    <th>lorem ipsum dolor</th>
-                    <th>lorem ipsum dolor</th>
+                <thead class="color-blue">
+                    <th class="color-white">lorem ipsum dolor</th>
+                    <th class="color-white">lorem ipsum dolor</th>
+                    <th class="color-white">lorem ipsum dolor</th>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr class="color-cyan">
                         <td>lorem ipsum</td>
                         <td>lorem ipsum</td>
                         <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit laudantium amet reiciendis quae sequi voluptas ad! Debitis sint, corporis quisquam aliquam qui, corrupti et incidunt voluptate atque alias aut cum.</td>
@@ -62,14 +62,17 @@
                         <td>lorem ipsum</td>
                         <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit laudantium amet reiciendis quae sequi voluptas ad! Debitis sint, corporis quisquam aliquam qui, corrupti et incidunt voluptate atque alias aut cum.</td>
                     </tr> 
-                    <tr>
+                    <tr class="color-cyan">
                         <td>lorem ipsum</td>
                         <td>lorem ipsum</td>
                         <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit laudantium amet reiciendis quae sequi voluptas ad! Debitis sint, corporis quisquam aliquam qui, corrupti et incidunt voluptate atque alias aut cum.</td>
                     </tr>
                 </tbody>
-            </table>
 
+                
+            </table>
+            
+            <p>Lorem ipsum dolor sit amet consectetur <span class="highlights">adipisicing elit</span> . Quisquam deleniti voluptatum voluptate veniam. Aut tempora omnis qui dolores recusandae deserunt sunt eos ipsam nisi. Totam ratione laudantium esse suscipit ex. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus cumque molestias enim, dolores quam, cum laboriosam sit labore incidunt omnis commodi magni, deleniti molestiae recusandae nisi earum error architecto quod.</p>
         </section>
         <!-- /explanation section -->
 
