--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
 
             <table>
                 <thead class="color-blue">
-                    <th class="color-white">lorem ipsum dolor</th>
-                    <th class="color-white">lorem ipsum dolor</th>
-                    <th class="color-white">lorem ipsum dolor</th>
+                    <tr>
+                        <th class="color-white">lorem ipsum dolor</th>
+                        <th class="color-white">lorem ipsum dolor</th>
+                        <th class="color-white">lorem ipsum dolor</th>
+                    </tr>
                 </thead>
                 <tbody>
                     <tr class="color-cyan">
@@ -80,7 +82,15 @@
     <!-- main -->
 
     <!-- footer -->
-    <footer></footer>
+    <footer>
+        <h4 class="report">Potrebbero interessarti</h4>
+        <div class="first report">
+            Lorem ipsum dolor
+        </div>
+        <div class="second report">
+            Lorem ipsum dolor
+        </div>
+    </footer>
     <!-- footer -->
 </body>
 </html>
